# test

./: CMakeLists.txt  README.md  package.xml
launch/: turtlesimAutomata_launch.xml
report/: Master2.bib  main.aux  main.bcf  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc
report/MatLabAnalyse/: analyse.asv  analyse.m  analyse_foc.m  analyse_sensorless_bldc.m  analyse_sensorless_bldc.mlx
report/MatLabAnalyse/DriveLabSession4/: scope_14.txt  scope_15.txt  scope_17.txt  scope_18.txt  scope_19.txt  scope_20.txt  scope_21.txt  scope_25.txt  scope_27.txt  scope_28.txt  scope_29.txt  scope_32.txt  scope_34.txt  scope_36.txt  scope_37.txt  scope_38.txt  scope_39.txt  scope_40.txt  scope_41.txt  scope_42.txt  scope_43.txt  scope_5.txt  scope_6.txt  scope_9.txt
report/MatLabAnalyse/LabSession3Meassurements/: scope_10.txt  scope_11.txt  scope_12.txt  scope_26.txt  scope_3.txt  scope_30.txt  scope_31.txt  scope_7.txt  scope_8.txt
report/tex/: Conclusion.tex  _defns.tex  _preamble.tex  additional_functionalities.tex  appendix.aux  appendix.tex  behaviour.tex  conclusion.aux  focbldc.aux  introduction.tex  package_overview.tex  purpose_and_scope.aux  purpose_and_scope.tex  sensoredbldc.aux  sensoredbldc.tex  sensorlessbldc.aux  sensorlessbldc.tex  titlepage.aux  titlepage.tex  usage.tex
src/: drive_turtle_continuously.cpp  edge.cpp  start_turtle.cpp  turn_turtle.cpp
